--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ygenius",
+  "name": "mkrgenius",
   "homepage": "https://ygenius.yearn.farm",
   "version": "0.1.0",
   "private": true,
